--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,8 +25,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+
       - name: Build Storybook
-        run: npm run build-storybook
+        run: bun run build-storybook
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
